nav z-index fix

--- a/src/components/NavMenu/navStyles.css
+++ b/src/components/NavMenu/navStyles.css
@@ -1,4 +1,8 @@
 
+.navigation * {
+  z-index: 200;;
+}
+
 .navigation {
   height: 60px;
   width: 100%;
